--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
         "laravel/tinker": "^2.0",
         "laravel/ui": "^3.0",
         "livewire/livewire": "^2.2",
+        "maatwebsite/excel": "^3.1",
         "spatie/laravel-permission": "^3.16",
         "yajra/laravel-datatables": "1.5"
     },
