--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
         "laravel/ui": "^3.0",
         "livewire/livewire": "^2.2",
         "maatwebsite/excel": "^3.1",
+        "milon/barcode": "^8.0",
         "spatie/laravel-permission": "^3.16",
         "yajra/laravel-datatables": "1.5"
     },
